force-app/main/default/objects/TW1_Request__c/TW1_Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <displayFormat>REQ{000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>