force-app/main/default/objects/TW1_Request__c/fields/BM_Status__c.field-meta.xml
<CustomField>
    <fullName>BM_Status__c</fullName>
    <defaultValue>&quot;Não enviado&quot;</defaultValue>
    <label>BM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BM_Status</valueSetName>
    </valueSet>
</CustomField>