force-app/main/default/objects/TW1_Request__c/fields/Day_of_the_Week_Requested__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week_Requested__c</fullName>
    <formula>Case (
Weekday(Datevalue(TW1_Send_inspection_Date__c)),
1, &apos;Requested: Sun&apos;,
2, &apos;Requested: Mon&apos;,
3, &apos;Requested: Tue&apos;,
4, &apos;Requested: Wen&apos;,
5, &apos;Requested: Thu&apos;,
6, &apos;Requested: Fri&apos;,
7, &apos;Requested: Sat&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week - Requested</label>
    <type>Text</type>
</CustomField>