force-app/main/default/objects/TW1_Request__c/fields/ID_Partner__c.field-meta.xml
<CustomField>
    <fullName>ID_Partner__c</fullName>
    <formula>TW1_Vendor__r.TW1_Step_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Partner</label>
    <type>Text</type>
</CustomField>