force-app/main/default/objects/TW1_Request__c/fields/Service_Performed_at_Onshore_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Service_Performed_at_Onshore_Supplier__c</fullName>
    <label>Service Performed at Onshore Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>