force-app/main/default/objects/TW1_Request__c/fields/T_Amount_to_be_Billed__c.field-meta.xml
<CustomField>
    <fullName>T_Amount_to_be_Billed__c</fullName>
    <label>Amount To Be Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>