force-app/main/default/objects/TW1_Request__c/fields/T_Comments_Focal__c.field-meta.xml
<CustomField>
    <fullName>T_Comments_Focal__c</fullName>
    <label>Comments - Focal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>