force-app/main/default/objects/TW1_Request__c/fields/T_Comments_Step_SED_NF__c.field-meta.xml
<CustomField>
    <fullName>T_Comments_Step_SED_NF__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>