force-app/main/default/objects/TW1_Request__c/fields/T_Justification_For_The_Review__c.field-meta.xml
<CustomField>
    <fullName>T_Justification_For_The_Review__c</fullName>
    <label>Justification For The Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>