force-app/main/default/objects/TW1_Request__c/fields/T_Quantity__c.field-meta.xml
<CustomField>
    <fullName>T_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>