force-app/main/default/objects/TW1_Request__c/fields/T_Reassignment_comments_compliance__c.field-meta.xml
<CustomField>
    <fullName>T_Reassignment_comments_compliance__c</fullName>
    <label>Reassignment comments compliance</label>
    <type>TextArea</type>
</CustomField>