force-app/main/default/objects/TW1_Request__c/fields/T_Reassignment_comments_Finance__c.field-meta.xml
<CustomField>
    <fullName>T_Reassignment_comments_Finance__c</fullName>
    <label>Reassignment comments - Finance</label>
    <type>TextArea</type>
</CustomField>