force-app/main/default/objects/TW1_Request__c/fields/T_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>T_Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scope Addition</fullName>
            </value>
            <value>
                <fullName>Daily Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>