force-app/main/default/objects/TW1_Request__c/fields/T_SED_Evaluation_Changing_Justification__c.field-meta.xml
<CustomField>
    <fullName>T_SED_Evaluation_Changing_Justification__c</fullName>
    <label>SED - Evaluation Changing Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>