force-app/main/default/objects/TW1_Request__c/fields/T_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>T_Service_Line__c</fullName>
    <label>Service Line</label>
    <length>10</length>
    <type>Text</type>
</CustomField>