force-app/main/default/objects/TW1_Request__c/fields/T_Service_Scope__c.field-meta.xml
<CustomField>
    <fullName>T_Service_Scope__c</fullName>
    <label>Service Scope</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>