force-app/main/default/objects/TW1_Request__c/fields/T_Single_Sourcing__c.field-meta.xml
<CustomField>
    <fullName>T_Single_Sourcing__c</fullName>
    <label>Single Sourcing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>