force-app/main/default/objects/TW1_Request__c/fields/T_Status_Focal__c.field-meta.xml
<CustomField>
    <fullName>T_Status_Focal__c</fullName>
    <label>Status (Focal)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Analysis</fullName>
            </value>
            <value>
                <fullName>Rejected (Information Missing)</fullName>
            </value>
            <value>
                <fullName>PR Pending</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>