force-app/main/default/objects/TW1_Request__c/fields/TCF_HSEQ_Responsible_Email__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEQ_Responsible_Email__c</fullName>
    <label>HSEQ Responsible Email</label>
    <type>Email</type>
</CustomField>