force-app/main/default/objects/TW1_Request__c/fields/Technical_Inspection_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Technical_Inspection_Recommendation__c</fullName>
    <inlineHelpText>(RTI). Fill as the Ex.: SPIE-RIT-2020-0001</inlineHelpText>
    <label>Technical Inspection Recommendation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>