force-app/main/default/objects/TW1_Request__c/fields/TW1_Address__c.field-meta.xml
<CustomField>
    <fullName>TW1_Address__c</fullName>
    <formula>TW1_Vendor__r.BillingStreet</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>