force-app/main/default/objects/TW1_Request__c/fields/TW1_All_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>TW1_All_Appraisal__c</fullName>
    <label>All Appraisal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>