force-app/main/default/objects/TW1_Request__c/fields/TW1_All_Approvals__c.field-meta.xml
<CustomField>
    <fullName>TW1_All_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Approvals</label>
    <type>Checkbox</type>
</CustomField>