force-app/main/default/objects/TW1_Request__c/fields/TW1_All_Inspection_Items_Approved__c.field-meta.xml
<CustomField>
    <fullName>TW1_All_Inspection_Items_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Inspection Items Approved</label>
    <type>Checkbox</type>
</CustomField>