force-app/main/default/objects/TW1_Request__c/fields/TW1_All_Inspection_Items_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_All_Inspection_Items_Status__c</fullName>
    <label>All Inspection Items Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved with Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>