force-app/main/default/objects/TW1_Request__c/fields/TW1_Approval_date_of_BM_in_SAP__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_date_of_BM_in_SAP__c</fullName>
    <label>Approval date of BM in SAP</label>
    <type>DateTime</type>
</CustomField>