force-app/main/default/objects/TW1_Request__c/fields/TW1_Approval_Status_Compliance_Step_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_Status_Compliance_Step_2__c</fullName>
    <label>Approval Status - Compliance - Step 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_Approval_Status</valueSetName>
    </valueSet>
</CustomField>