force-app/main/default/objects/TW1_Request__c/fields/TW1_Approval_Status_Finance_Step_1__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_Status_Finance_Step_1__c</fullName>
    <label>Approval Status - Finance - Step 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_Approval_Status</valueSetName>
    </valueSet>
</CustomField>