force-app/main/default/objects/TW1_Request__c/fields/TW1_Approval_Status_Quality__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_Status_Quality__c</fullName>
    <label>Approval Status - Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_Approval_Status</valueSetName>
    </valueSet>
</CustomField>