force-app/main/default/objects/TW1_Request__c/fields/TW1_Approval_Status_Vetting_Final_Check__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_Status_Vetting_Final_Check__c</fullName>
    <label>Approval Status - Vetting Final Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TW1_Approval_Status</valueSetName>
    </valueSet>
</CustomField>