force-app/main/default/objects/TW1_Request__c/fields/TW1_Approval_Status_VP__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approval_Status_VP__c</fullName>
    <label>Approval Status - VP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Red Flag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>