force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_Compliance_Step_1__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_Compliance_Step_1__c</fullName>
    <label>Approver - Compliance - Step 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>