force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_Docs_Validation_VV__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_Docs_Validation_VV__c</fullName>
    <label>Approver - Docs Validation (VV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>