force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_Enable_Customer_User__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_Enable_Customer_User__c</fullName>
    <label>Approver - Enable Customer User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>