force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_GM_SC_FIN_CON__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_GM_SC_FIN_CON__c</fullName>
    <label>Approver - GM SC, FIN, CON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>