force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_HSEQ_EPCI_or_Op__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_HSEQ_EPCI_or_Op__c</fullName>
    <label>Approver - HSEQ (EPCI or Op)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>