force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_Procurement_Manager__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_Procurement_Manager__c</fullName>
    <label>Approver - Procurement Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>