force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_Quality__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_Quality__c</fullName>
    <label>Approver - Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>