force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_Vetting_Final_Check__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_Vetting_Final_Check__c</fullName>
    <label>Approver - Vetting Final Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>