force-app/main/default/objects/TW1_Request__c/fields/TW1_Approver_VVW_Attachment__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approver_VVW_Attachment__c</fullName>
    <label>Approver - VVW Attachment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>