force-app/main/default/objects/TW1_Request__c/fields/TW1_Attached_Document__c.field-meta.xml
<CustomField>
    <fullName>TW1_Attached_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached Document</label>
    <type>Checkbox</type>
</CustomField>