force-app/main/default/objects/TW1_Request__c/fields/TW1_Autonumber_Contract__c.field-meta.xml
<CustomField>
    <fullName>TW1_Autonumber_Contract__c</fullName>
    <displayFormat>SC-{YY}-{000000}</displayFormat>
    <label>Autonumber - Demand Contract</label>
    <type>AutoNumber</type>
</CustomField>