force-app/main/default/objects/TW1_Request__c/fields/TW1_BM_Creation_Date_in_SAP__c.field-meta.xml
<CustomField>
    <fullName>TW1_BM_Creation_Date_in_SAP__c</fullName>
    <label>BM Creation Date in SAP</label>
    <type>DateTime</type>
</CustomField>