force-app/main/default/objects/TW1_Request__c/fields/TW1_BM_Reference_Number_in_SAP_MODEC__c.field-meta.xml
<CustomField>
    <fullName>TW1_BM_Reference_Number_in_SAP_MODEC__c</fullName>
    <inlineHelpText>This field is read-only. Do not try to fill it.</inlineHelpText>
    <label>BM Reference Number in SAP MODEC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>