force-app/main/default/objects/TW1_Request__c/fields/TW1_BM_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW1_BM_Rejection_Reason__c</fullName>
    <label>BM Rejection Reason</label>
    <type>TextArea</type>
</CustomField>