force-app/main/default/objects/TW1_Request__c/fields/TW1_BM_Value__c.field-meta.xml
<CustomField>
    <fullName>TW1_BM_Value__c</fullName>
    <label>BM Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>