force-app/main/default/objects/TW1_Request__c/fields/TW1_BM_Value_Rollup__c.field-meta.xml
<CustomField>
    <fullName>TW1_BM_Value_Rollup__c</fullName>
    <label>BM Value</label>
    <summarizedField>BM_Item__c.TW1_Total__c</summarizedField>
    <summaryForeignKey>BM_Item__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>