force-app/main/default/objects/TW1_Request__c/fields/TW1_Cal_Days_Taken_to_Attend_Inspection__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cal_Days_Taken_to_Attend_Inspection__c</fullName>
    <formula>TW1_Conclusion_Date_Perform_Inspection__c - TW1_Send_inspection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Days Taken to Attend Inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>