force-app/main/default/objects/TW1_Request__c/fields/TW1_Cancel_Note__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cancel_Note__c</fullName>
    <label>Cancel Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>