force-app/main/default/objects/TW1_Request__c/fields/TW1_Canceled_by__c.field-meta.xml
<CustomField>
    <fullName>TW1_Canceled_by__c</fullName>
    <label>Canceled by</label>
    <type>TextArea</type>
</CustomField>