force-app/main/default/objects/TW1_Request__c/fields/TW1_Change_and_Repair_Project__c.field-meta.xml
<CustomField>
    <fullName>TW1_Change_and_Repair_Project__c</fullName>
    <inlineHelpText>(PAR). Fill as the Ex.: PAR-2020-0001</inlineHelpText>
    <label>Change and Repair Project</label>
    <length>40</length>
    <type>Text</type>
</CustomField>