force-app/main/default/objects/TW1_Request__c/fields/TW1_CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>TW1_CNPJ_CPF__c</fullName>
    <formula>IF(TW1_Vendor__r.TW1_CNPJ__c  &lt;&gt; &quot;&quot;,TW1_Vendor__r.TW1_CNPJ__c,IF(TW1_Vendor__r.TW1_CPF__c &lt;&gt; &quot;&quot;, TW1_Vendor__r.TW1_CPF__c ,&quot;&quot;))</formula>
    <label>CNPJ/CPF</label>
    <type>Text</type>
</CustomField>