force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_CEO_if_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_CEO_if_Red_Flag__c</fullName>
    <label>Comments - CEO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>