force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Compliance_Step_1__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Compliance_Step_1__c</fullName>
    <label>Comments - Compliance - Step 1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>