force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Compliance_Step_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Compliance_Step_2__c</fullName>
    <label>Comments - Compliance - Step 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>