force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Date_Availability__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Date_Availability__c</fullName>
    <label>Comments - Date Availability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>