force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Docs_Validation_VV__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Docs_Validation_VV__c</fullName>
    <label>Comments - Docs Validation (VV)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>