force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Emergency_Approval__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Emergency_Approval__c</fullName>
    <label>Comments - Emergency Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>