force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Enable_Customer_User__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Enable_Customer_User__c</fullName>
    <label>Comments - Enable Customer User</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>