force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Engineering__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Engineering__c</fullName>
    <label>Comments - Engineering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>