force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Finance_Step_1__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Finance_Step_1__c</fullName>
    <label>Comments - Finance - Step 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>