force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_GM_SC_FIN_CON__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_GM_SC_FIN_CON__c</fullName>
    <label>Comments - GM SC, FIN, CON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>