force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_HSEQ_EPCI_or_Operation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_HSEQ_EPCI_or_Operation__c</fullName>
    <label>Comments - HSEQ (EPCI or Operation)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>