force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Procurement_Manager__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Procurement_Manager__c</fullName>
    <label>Comments - Procurement Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>