force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_Vetting_Final_Check__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_Vetting_Final_Check__c</fullName>
    <label>Comments - Vetting Final Check</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>