force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_VP__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_VP__c</fullName>
    <label>Comments - VP</label>
    <type>TextArea</type>
</CustomField>