force-app/main/default/objects/TW1_Request__c/fields/TW1_Comments_VVW_Attachment__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments_VVW_Attachment__c</fullName>
    <label>Comments - VVW Attachment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>