force-app/main/default/objects/TW1_Request__c/fields/TW1_Company_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TW1_Company_Email_Address__c</fullName>
    <formula>TW1_Vendor__r.TW1_Company_Email_Address__c</formula>
    <label>Company Email Address</label>
    <type>Text</type>
</CustomField>