force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date__c</fullName>
    <label>Conclusion Date</label>
    <type>DateTime</type>
</CustomField>