force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_CEO_if_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_CEO_if_Red_Flag__c</fullName>
    <label>Conclusion Date - CEO</label>
    <type>DateTime</type>
</CustomField>