force-app/main/default/objects/TW1_Request__c/fields/TW1_Conclusion_Date_Compliance_Step_1__c.field-meta.xml
<CustomField>
    <fullName>TW1_Conclusion_Date_Compliance_Step_1__c</fullName>
    <label>Conclusion Date - Compliance - Step 1</label>
    <type>DateTime</type>
</CustomField>